[gd_scene load_steps=30 format=2]

[ext_resource path="res://Actors/Enemies/Pig/Pig.gd" type="Script" id=1]
[ext_resource path="res://Actors/Attributes/Health.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/03-Pig/Hit (34x28).png" type="Texture" id=3]
[ext_resource path="res://Scripts/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://Assets/03-Pig/Idle (34x28).png" type="Texture" id=5]
[ext_resource path="res://Actors/Enemies/Pig/Idle.gd" type="Script" id=6]
[ext_resource path="res://Assets/03-Pig/Dead (34x28).png" type="Texture" id=7]
[ext_resource path="res://Actors/Enemies/Pig/Hit.gd" type="Script" id=8]
[ext_resource path="res://Actors/Enemies/Pig/Dead.gd" type="Script" id=9]
[ext_resource path="res://Actors/Enemies/Pig/PigAnimation.gd" type="Script" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 34, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 68, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 102, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 136, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 170, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 204, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 238, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 272, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 306, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 340, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 34, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 34, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 68, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 102, 0, 34, 28 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "hit",
"speed": 10.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": false,
"name": "dead",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 9.02646, 8.59828 )

[node name="Pig" type="KinematicBody2D"]
scale = Vector2( 2.2, 2.2 )
collision_layer = 2
collision_mask = 13
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.16744e-07, 0 )
frames = SubResource( 18 )
animation = "idle"
playing = true
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.84569, 5.57281 )
shape = SubResource( 19 )

[node name="DamageCooldown" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Health" parent="." instance=ExtResource( 2 )]
max_health = 2

[node name="State" type="Node" parent="."]
script = ExtResource( 4 )
host_path = NodePath("..")

[node name="Idle" type="Node" parent="State"]
script = ExtResource( 6 )
state_name = "idle"

[node name="Hit" type="Node" parent="State"]
script = ExtResource( 8 )
state_name = "hit"

[node name="Dead" type="Node" parent="State"]
script = ExtResource( 9 )
state_name = "dead"
[connection signal="animation_finished" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_animation_finished"]
[connection signal="dead_animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_dead_animation_finished"]
[connection signal="hit_animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_hit_animation_finished"]
[connection signal="state_changed" from="State" to="AnimatedSprite" method="_on_State_state_changed"]
